--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>English to Urdu Translator • Ghosty</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@600;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
     margin:0;
     min-height:100vh;
     display:flex;
-    justify-content:center;
     align-items:center;
+    justify-content:center;
     background:radial-gradient(circle at top,#0a1a3a,#000);
     font-family:'Poppins',sans-serif;
     color:#fff;
 }
 .card{
     width:100%;
-    max-width:420px;
-    padding:26px 20px;
+    max-width:400px;
+    padding:28px 22px;
     border-radius:18px;
     background:rgba(0,0,0,.65);
     backdrop-filter:blur(12px);
@@ -38,11 +38,11 @@ body{
 .subtitle{
     font-size:14px;
     color:#cfd8dc;
-    margin-bottom:14px;
+    margin-bottom:16px;
 }
 textarea{
     width:100%;
-    min-height:90px;
+    min-height:110px;
     border:none;
     border-radius:12px;
     padding:12px;
@@ -51,6 +51,12 @@ textarea{
     color:#fff;
     outline:none;
     resize:none;
+}
+#output{
+    font-family:'Noto Nastaliq Urdu',serif;
+    direction:rtl;
+    text-align:right;
+    font-size:16px;
 }
 button{
     width:100%;
@@ -64,16 +70,19 @@ button{
     box-shadow:0 0 20px rgba(33,150,243,.7);
     cursor:pointer;
 }
-iframe{
-    width:100%;
-    height:240px;
-    border:none;
-    border-radius:12px;
+.whatsapp{
+    display:block;
     margin-top:14px;
-    background:#fff;
+    padding:14px;
+    border-radius:50px;
+    text-decoration:none;
+    background:linear-gradient(135deg,#25D366,#1ebe5d);
+    box-shadow:0 0 20px rgba(37,211,102,.7);
+    color:#fff;
+    font-weight:600;
 }
 .footer{
-    margin-top:12px;
+    margin-top:14px;
     font-size:12px;
     color:#90caf9;
 }
@@ -91,9 +100,13 @@ iframe{
 
     <textarea id="input" placeholder="Enter English text..."></textarea>
 
-    <button onclick="translate()">Translate to Urdu</button>
+    <button onclick="translateText()">Translate to Urdu</button>
 
-    <iframe id="frame"></iframe>
+    <textarea id="output" placeholder="اردو ترجمہ یہاں ظاہر ہوگا"></textarea>
+
+    <a class="whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
+        Join WhatsApp Group
+    </a>
 
     <div class="footer">
         Developed by <span>Ghosty</span>
@@ -101,17 +114,31 @@ iframe{
 </div>
 
 <script>
-function translate(){
+function translateText(){
     const text = document.getElementById("input").value.trim();
     if(!text){
         alert("Please enter English text");
         return;
     }
 
-    document.getElementById("frame").src =
-        "https://translate.google.com/?sl=en&tl=ur&text="
-        + encodeURIComponent(text)
-        + "&op=translate";
+    document.getElementById("output").value = "ترجمہ ہو رہا ہے...";
+
+    const script = document.createElement("script");
+    const callbackName = "cb_" + Math.random().toString(36).substring(2);
+
+    window[callbackName] = function(response){
+        document.getElementById("output").value =
+            response.responseData.translatedText;
+        document.body.removeChild(script);
+        delete window[callbackName];
+    };
+
+    script.src =
+        "https://api.mymemory.translated.net/get?q=" +
+        encodeURIComponent(text) +
+        "&langpair=en|ur&callback=" + callbackName;
+
+    document.body.appendChild(script);
 }
 </script>
 
